<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.InterfaceActivity"
    android:background="@drawable/livetvv"
    >


    <Button
        android:id="@+id/btn_livetv"
        style="@style/TriangleUpButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstP_livetTV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />



    <Button
        android:id="@+id/btn_settings"
        style="@style/TriangleUpButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstP_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_movies"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_movies"
        style="@style/TriangleUpButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstP_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_livetv"
        app:layout_constraintEnd_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/textView2"
        style="@style/DefaultTextstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstP_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/DefaultTextstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chiheb Bidani"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>