<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UrlActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/streaming_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="66dp"
        android:layout_marginLeft="22dp"
        android:fontFamily="@font/unigeoregular"
        android:text="Please put your url below"
        android:textSize="24dp"
        app:layout_constraintTop_toTopOf="@+id/input_text"
        app:layout_constraintBottom_toBottomOf="@+id/welcome"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/welcome"
        style="@style/DefaultTextstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_title_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/input_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/connection_url"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="80dp"
        />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_send_button"
        style="@style/RoundedButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>