<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/type_player">

    <RelativeLayout
        android:id="@+id/type_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_selector"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <Button
        android:id="@+id/btn_default"
        style="@style/RoundedButtonStyle"
        android:layout_width="149dp"
        android:layout_height="143dp"
        android:layout_marginTop="60dp"
        android:padding="10dp"


        android:text="@string/type_player_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnurl"
        />

    <Button
        android:id="@+id/btnurl"
        style="@style/RoundedButtonStyle"
        android:layout_width="149dp"
        android:layout_height="143dp"
        android:padding="10dp"
        android:text="@string/type_player_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_default"
        app:layout_constraintBottom_toTopOf="@id/btn_local"/>

    <Button
        android:id="@+id/btn_local"
        style="@style/RoundedButtonStyle"
        android:layout_width="149dp"
        android:layout_height="143dp"
        android:padding="10dp"
        android:text="@string/type_player_local"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnurl"
       />

    <TextView
        android:id="@+id/txt_playerType"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        style="@style/DefaultTextstyle"
        android:text="Player Type"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>